# A2A_project

./: .env  README.md  main.py  pyproject.toml  requirements.txt
elon_agent/: pyproject.toml  requirements.txt
elon_agent/.adk/: session.db
elon_agent/elon/: agent.py  tools.py
elon_agent/elon/.adk/: session.db
jeff_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml  requirements.txt  tools.py
mark_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml  requirements.txt  tools.py
