[project]
name = "a2a-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
]
